[package]
name = "diem-node"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem node"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
fail = "0.4.0"
futures = "0.3.12"
jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
structopt = "0.3.21"
tokio = { version = "1.4.0", features = ["full"] }
tokio-stream = "0.1.4"

backup-service = { path = "../storage/backup/backup-service" }
consensus = { path = "../consensus" }
crash-handler = { path = "../common/crash-handler" }
debug-interface = { path = "../common/debug-interface" }
executor = { path = "../execution/executor" }
executor-types = { path = "../execution/executor-types" }
diem-config = { path = "../config" }
diem-crypto = { path = "../crypto/crypto" }
diem-genesis-tool = {path = "../config/management/genesis", features = ["testing"] }
diem-json-rpc = { path = "../json-rpc" }
diem-logger = { path = "../common/logger" }
diem-mempool = { path = "../mempool" }
diem-metrics = { path = "../common/metrics" }
diem-secure-storage = { path = "../secure/storage" }
diem-temppath = { path = "../common/temppath" }
diem-time-service = { path = "../common/time-service" }
diem-trace = { path = "../common/trace" }
diem-types = { path = "../types" }
diem-vm = { path = "../language/diem-vm" }
diem-workspace-hack = { path = "../common/workspace-hack" }
diemdb = { path = "../storage/diemdb" }
network-builder = { path = "../network/builder" }
state-sync = { path = "../state-sync" }
storage-client = { path = "../storage/storage-client" }
storage-interface= { path = "../storage/storage-interface" }
storage-service = { path = "../storage/storage-service" }
subscription-service = { path = "../common/subscription-service" }

[features]
default = []
assert-private-keys-not-cloneable = ["diem-crypto/assert-private-keys-not-cloneable"]
failpoints = ["fail/failpoints", "consensus/failpoints", "executor/failpoints", "diem-json-rpc/failpoints", "diem-mempool/failpoints", "state-sync/failpoints"]
