[package]
name = "executor"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra executor"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
backoff = { version = "0.1.5", default-features = false }
config-builder = { path = "../config/config-builder" }
futures = { version = "=0.3.0-alpha.19", package = "futures-preview" }
itertools = { version = "0.8.0", default-features = false }
lazy_static = { version = "1.3.0", default-features = false }
rusty-fork = { version = "0.2.2", default-features = false }
serde = { version = "1.0.99", default-features = false }

libra-config = { path = "../config" }
libra-crypto = { path = "../crypto/crypto" }
failure = { path = "../common/failure-ext", package = "libra-failure-ext" }
libra-logger = { path = "../common/logger" }
libra-metrics = { path = "../common/metrics" }
libra-prost-ext = { path = "../common/prost-ext" }
scratchpad = { path = "../storage/scratchpad" }
libra-state-view = { path = "../storage/state-view" }
storage-client = { path = "../storage/storage-client" }
libra-types = { path = "../types" }
vm_runtime = { path = "../language/vm/vm_runtime" }

[dev-dependencies]
grpcio = { version = "=0.5.0-alpha.4", default-features = false }
proptest = "0.9.2"
rand = "0.6.5"
rusty-fork = "0.2.1"

libra-config = { path = "../config", features = ["testing"]}
grpc_helpers = { path = "../common/grpc_helpers" }
libra-types = { path = "../types", features = ["testing"]}

storage-proto = { path = "../storage/storage-proto" }
storage-service = { path = "../storage/storage-service" }
vm-genesis = { path = "../language/vm/vm-genesis" }
transaction-builder = { path = "../language/transaction-builder" }
