[package]
name = "executor"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra executor"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
backoff = { version = "0.1.5", default-features = false }
config-builder = { path = "../config/config-builder", version = "0.1.0" }
futures = "0.3.0"
itertools = { version = "0.8.0", default-features = false }
lazy_static = { version = "1.3.0", default-features = false }
rusty-fork = { version = "0.2.2", default-features = false }
serde = { version = "1.0.99", default-features = false }
tokio = { version = "0.2", features = ["full"] }

libra-config = { path = "../config", version = "0.1.0" }
libra-crypto = { path = "../crypto/crypto", version = "0.1.0" }
libra-logger = { path = "../common/logger", version = "0.1.0" }
libra-metrics = { path = "../common/metrics", version = "0.1.0" }
libra-prost-ext = { path = "../common/prost-ext", version = "0.1.0" }
lcs = { path = "../common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
scratchpad = { path = "../storage/scratchpad", version = "0.1.0" }
libra-state-view = { path = "../storage/state-view", version = "0.1.0" }
storage-client = { path = "../storage/storage-client", version = "0.1.0" }
storage-proto = { path = "../storage/storage-proto", version = "0.1.0" }
libra-types = { path = "../types", version = "0.1.0" }
vm-runtime = { path = "../language/vm/vm-runtime", version = "0.1.0" }

[dev-dependencies]
grpcio = { version = "=0.5.0-alpha.4", default-features = false }
proptest = "0.9.2"
rand = "0.6.5"
rusty-fork = "0.2.1"

grpc-helpers = { path = "../common/grpc-helpers", version = "0.1.0" }
lcs = { path = "../common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
storage-service = { path = "../storage/storage-service", version = "0.1.0" }
vm-genesis = { path = "../language/tools/vm-genesis", version = "0.1.0" }
transaction-builder = { path = "../language/transaction-builder", version = "0.1.0" }

[features]
default = []
fuzzing = ["libra-config/fuzzing", "libra-crypto/fuzzing", "libra-types/fuzzing"]
