[package]
name = "diem-json-rpc"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem rpc endpoint"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
fail = "0.4.0"
futures = "0.3.12"
hex = "0.4.2"
hyper = "0.14.2"
once_cell = "1.4.1"
rand = "0.7.3"
serde_json = "1.0.61"
serde = { version = "1.0.123", features = ["derive"], default-features = false }
tokio = { version = "1.1.1", features = ["full"] }
warp = { version = "0.3.0", features = ["tls"] }
reqwest = { version = "0.11.0", features = ["blocking", "json"], default_features = false, optional = true }
proptest = { version = "0.10.1", optional = true }

bcs = "0.1.2"
diem-config = { path = "../config", version = "0.1.0" }
diem-crypto = { path = "../crypto/crypto", version = "0.1.0" }
diemdb = { path = "../storage/diemdb", version = "0.1.0", optional = true }
diem-json-rpc-types = { path = "./types", version = "0.1.0", package = "diem-json-rpc-types" }
diem-logger = { path = "../common/logger", version = "0.1.0" }
diem-mempool = { path = "../mempool", version = "0.1.0" }
diem-metrics = { path = "../common/metrics", version = "0.1.0" }
diem-proptest-helpers = { path = "../common/proptest-helpers", optional = true }
diem-trace = { path = "../common/trace", version = "0.1.0" }
diem-types = { path = "../types", version = "0.1.0" }
diem-temppath = { path = "../common/temppath", version = "0.1.0", optional = true }
diem-workspace-hack = { path = "../common/workspace-hack", version = "0.1.0" }
move-core-types = { path = "../language/move-core/types", version = "0.1.0" }
network = { path = "../network", version = "0.1.0" }
storage-interface = { path = "../storage/storage-interface", version = "0.1.0" }

[dev-dependencies]
proptest = "0.10.1"
reqwest = { version = "0.11.0", features = ["blocking", "json"], default_features = false }
rand = { version = "0.7.3" }

generate-key = { path = "../config/generate-key", version = "0.1.0" }
diemdb = { path = "../storage/diemdb", version = "0.1.0", features = ["fuzzing"] }
diem-genesis-tool = {path = "../config/management/genesis", version = "0.1.0", features = ["testing"] }
diem-json-rpc-client = { path = "../client/json-rpc", version = "0.1.0" }
diem-mempool = { path = "../mempool", version = "0.1.0", features = ["fuzzing"] }
diem-proptest-helpers = { path = "../common/proptest-helpers" }
diem-temppath = { path = "../common/temppath", version = "0.1.0" }
diem-types = { path = "../types", version = "0.1.0", features = ["fuzzing"] }
vm-validator = { path = "../vm-validator", version = "0.1.0" }
compiled-stdlib = { path = "../language/stdlib/compiled",  version = "0.1.0" }
vm-genesis = { path = "../language/tools/vm-genesis", version = "0.1.0" }
executor = { path = "../execution/executor", version = "0.1.0" }
executor-types = { path = "../execution/executor-types", version = "0.1.0" }
scratchpad = { path = "../storage/scratchpad", version = "0.1.0" }
move-vm-types = { path = "../language/move-vm/types", version = "0.1.0" }
transaction-builder-generated = { path = "../client/transaction-builder", version = "0.1.0" }
diem-node = { path = "../diem-node", version = "0.1.0" }

[features]
fuzzing = ["proptest", "diem-mempool/fuzzing", "diemdb/fuzzing", "diem-proptest-helpers", "diem-temppath", "reqwest"]
failpoints = ["fail/failpoints"]
