[package]
name = "diem-json-rpc"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem rpc endpoint"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
fail = "0.4.0"
futures = "0.3.12"
hex = "0.4.3"
hyper = "0.14.4"
once_cell = "1.7.2"
rand = "0.8.3"
serde_json = "1.0.64"
serde = { version = "1.0.124", features = ["derive"], default-features = false }
tokio = { version = "1.2.0", features = ["full"] }
warp = { version = "0.3.0", features = ["tls"] }
reqwest = { version = "0.11.1", features = ["blocking", "json"], default_features = false, optional = true }
proptest = { version = "1.0.0", optional = true }

bcs = "0.1.2"
compiled-stdlib = { path = "../language/diem-framework/compiled" }
diem-config = { path = "../config" }
diem-crypto = { path = "../crypto/crypto" }
diemdb = { path = "../storage/diemdb", optional = true }
diem-json-rpc-types = { path = "./types", package = "diem-json-rpc-types" }
diem-logger = { path = "../common/logger" }
diem-mempool = { path = "../mempool" }
diem-metrics = { path = "../common/metrics" }
diem-proptest-helpers = { path = "../common/proptest-helpers", optional = true }
diem-trace = { path = "../common/trace" }
diem-types = { path = "../types" }
diem-temppath = { path = "../common/temppath", optional = true }
diem-workspace-hack = { path = "../common/workspace-hack" }
move-core-types = { path = "../language/move-core/types" }
move-explain = { path = "../language/tools/move-explain" }
network = { path = "../network" }
storage-interface = { path = "../storage/storage-interface" }

[dev-dependencies]
proptest = "1.0.0"
reqwest = { version = "0.11.1", features = ["blocking", "json"], default_features = false }
rand = { version = "0.8.3" }

generate-key = { path = "../config/generate-key" }
diemdb = { path = "../storage/diemdb", features = ["fuzzing"] }
diem-genesis-tool = {path = "../config/management/genesis", features = ["testing"] }
diem-client = { path = "../sdk/client" }
diem-mempool = { path = "../mempool", features = ["fuzzing"] }
diem-proptest-helpers = { path = "../common/proptest-helpers" }
diem-temppath = { path = "../common/temppath" }
diem-types = { path = "../types", features = ["fuzzing"] }
vm-validator = { path = "../vm-validator" }
compiled-stdlib = { path = "../language/diem-framework/compiled" }
vm-genesis = { path = "../language/tools/vm-genesis" }
executor = { path = "../execution/executor" }
executor-types = { path = "../execution/executor-types" }
scratchpad = { path = "../storage/scratchpad" }
move-vm-types = { path = "../language/move-vm/types" }
transaction-builder-generated = { path = "../client/transaction-builder" }
diem-node = { path = "../diem-node" }

[features]
fuzzing = ["proptest", "diem-mempool/fuzzing", "diemdb/fuzzing", "diem-proptest-helpers", "diem-temppath", "reqwest"]
failpoints = ["fail/failpoints"]
