[package]
name = "diem-json-rpc"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem rpc endpoint"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
fail = "0.4.0"
futures = "0.3.12"
hex = "0.4.3"
hyper = "0.14.4"
once_cell = "1.7.2"
rand = "0.8.3"
serde_json = "1.0.64"
serde = { version = "1.0.124", features = ["derive"], default-features = false }
tokio = { version = "1.6.1", features = ["full"] }
tokio-retry = "0.3.0"
tokio-stream = "0.1.4"
tokio-tungstenite = "0.13.0"
warp = { version = "0.3.0", features = ["default", "tls", "tokio-rustls", "tokio-tungstenite", "websocket"] }
reqwest = { version = "0.11.2", features = ["blocking", "json"], default_features = false, optional = true }
proptest = { version = "1.0.0", optional = true }
regex = { version = "1.4.3", default-features = false, features = ["std", "perf"] }

bcs = "0.1.2"
diem-framework-releases= { path = "../language/diem-framework/releases" }
diem-client = { path = "../sdk/client", optional = true }
diem-config = { path = "../config" }
diem-crypto = { path = "../crypto/crypto" }
diemdb = { path = "../storage/diemdb", optional = true }
diem-json-rpc-types = { path = "./types", package = "diem-json-rpc-types" }
diem-infallible = { path = "../common/infallible" }
diem-logger = { path = "../common/logger" }
diem-mempool = { path = "../mempool" }
diem-metrics = { path = "../common/metrics" }
diem-proptest-helpers = { path = "../common/proptest-helpers", optional = true }
diem-types = { path = "../types" }
diem-temppath = { path = "../common/temppath", optional = true }
diem-workspace-hack = { path = "../common/workspace-hack" }
executor = { path = "../execution/executor" , optional = true}
executor-types = { path = "../execution/executor-types" , optional = true}
move-core-types = { path = "../language/move-core/types" }
move-vm-types = { path = "../language/move-vm/types", optional = true }
network = { path = "../network" }
scratchpad = { path = "../storage/scratchpad", optional = true }
storage-interface = { path = "../storage/storage-interface" }
thiserror = "1.0.24"
vm-genesis = { path = "../language/tools/vm-genesis", optional = true }

[dev-dependencies]
proptest = "1.0.0"
reqwest = { version = "0.11.2", features = ["blocking", "json"], default_features = false }
rand = { version = "0.8.3" }

generate-key = { path = "../config/generate-key" }
diemdb = { path = "../storage/diemdb", features = ["fuzzing"] }
diem-genesis-tool = {path = "../config/management/genesis", features = ["testing"] }
diem-client = { path = "../sdk/client" }
diem-mempool = { path = "../mempool", features = ["fuzzing"] }
diem-proptest-helpers = { path = "../common/proptest-helpers" }
diem-temppath = { path = "../common/temppath" }
diem-types = { path = "../types", features = ["fuzzing"] }
vm-validator = { path = "../vm-validator" }
diem-framework-releases= { path = "../language/diem-framework/releases" }
vm-genesis = { path = "../language/tools/vm-genesis" }
executor = { path = "../execution/executor" }
executor-types = { path = "../execution/executor-types" }
scratchpad = { path = "../storage/scratchpad" }
move-vm-types = { path = "../language/move-vm/types" }
diem-transaction-builder = { path = "../sdk/transaction-builder" }
diem-sdk = { path = "../sdk" }
diem-node = { path = "../diem-node" }
forge = { path = "../testsuite/forge" }

[features]
fuzzing = ["proptest", "diem-client", "diem-mempool/fuzzing", "diemdb/fuzzing", "diem-proptest-helpers", "diem-temppath", "executor", "executor-types", "move-vm-types", "reqwest", "scratchpad", "vm-genesis"]
failpoints = ["fail/failpoints"]

[[test]]
name = "jsonrpc-integration-tests"
harness = false
