[package]
name = "libra-node"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra node"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = "0.3.0"
jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
parity-multiaddr = "0.7.2"
rayon = "1.2.0"
structopt = "0.3.12"
tokio = { version = "0.2.14", features = ["full"] }
tonic = "0.1"

admission-control-proto = { path = "../admission_control/admission-control-proto", version = "0.1.0" }
admission-control-service = { path = "../admission_control/admission-control-service", version = "0.1.0" }
libra-config = { path = "../config", version = "0.1.0" }
consensus = { path = "../consensus", version = "0.1.0" }
crash-handler = { path = "../common/crash-handler", version = "0.1.0" }
debug-interface = { path = "../common/debug-interface", version = "0.1.0" }
executor = { path = "../execution/executor", version = "0.1.0" }
libra-logger = { path = "../common/logger", version = "0.1.0" }
libra-mempool = { path = "../mempool", version = "0.1.0" }
libra-metrics = { path = "../common/metrics", version = "0.1.0" }
libra-crypto = { path = "../crypto/crypto", version = "0.1.0" }
network = { path = "../network", version = "0.1.0" }
libra-json-rpc = { path = "../json-rpc", version = "0.1.0" }
state-synchronizer = { path = "../state-synchronizer", version = "0.1.0" }
storage-client = { path = "../storage/storage-client", version = "0.1.0" }
storage-service = { path = "../storage/storage-service", version = "0.1.0" }
libra-types = { path = "../types", version = "0.1.0" }
libra-vm = { path = "../language/libra-vm", version = "0.1.0" }

[features]
default = []
assert-private-keys-not-cloneable = ["libra-crypto/assert-private-keys-not-cloneable"]
