[package]
name = "libra-node"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra node"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
fail = "0.4.0"
futures = "0.3.6"
jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
structopt = "0.3.19"
tokio = { version = "0.2.22", features = ["full"] }

backup-service = { path = "../storage/backup/backup-service", version = "0.1.0" }
consensus = { path = "../consensus", version = "0.1.0" }
crash-handler = { path = "../common/crash-handler", version = "0.1.0" }
debug-interface = { path = "../common/debug-interface", version = "0.1.0" }
executor = { path = "../execution/executor", version = "0.1.0" }
executor-types = { path = "../execution/executor-types", version = "0.1.0" }
libra-config = { path = "../config", version = "0.1.0" }
libra-crypto = { path = "../crypto/crypto", version = "0.1.0" }
libra-genesis-tool = {path = "../config/management/genesis", version = "0.1.0", features = ["testing"] }
libra-json-rpc = { path = "../json-rpc", version = "0.1.0" }
libra-logger = { path = "../common/logger", version = "0.1.0" }
libra-mempool = { path = "../mempool", version = "0.1.0" }
libra-metrics = { path = "../common/metrics", version = "0.1.0" }
libra-secure-storage = { path = "../secure/storage", version = "0.1.0" }
libra-temppath = { path = "../common/temppath", version = "0.1.0" }
libra-trace = { path = "../common/trace", version = "0.1.0" }
libra-types = { path = "../types", version = "0.1.0" }
libra-vm = { path = "../language/libra-vm", version = "0.1.0" }
libra-workspace-hack = { path = "../common/workspace-hack", version = "0.1.0" }
libradb = { path = "../storage/libradb", version = "0.1.0" }
network-builder = { path = "../network/builder", version = "0.1.0" }
state-synchronizer = { path = "../state-synchronizer", version = "0.1.0" }
storage-client = { path = "../storage/storage-client", version = "0.1.0" }
storage-interface= { path = "../storage/storage-interface", version = "0.1.0" }
storage-service = { path = "../storage/storage-service", version = "0.1.0" }
subscription-service = { path = "../common/subscription-service", version = "0.1.0" }

[features]
default = []
assert-private-keys-not-cloneable = ["libra-crypto/assert-private-keys-not-cloneable"]
failpoints = ["fail/failpoints", "consensus/failpoints", "executor/failpoints", "libra-json-rpc/failpoints"]
