[package]
name = "libra-swarm"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra swarm"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
ctrlc = { version = "3.1.4", default-features = false }
structopt = "0.3.13"
thiserror = "1.0"

cli = { path = "../client/cli", version = "0.1.0" }
config-builder = { path = "../config/config-builder", version = "0.1.0" }
libra-config = { path = "../config", version = "0.1.0", features = ["fuzzing"] }
debug-interface = { path = "../common/debug-interface", version = "0.1.0" }
generate-keypair = { path = "../config/generate-keypair", version = "0.1.0" }
libra-logger = { path = "../common/logger", version = "0.1.0" }
libra-crypto = { path = "../crypto/crypto", version = "0.1.0", features = ["cloneable-private-keys"] }
libra-temppath = { path = "../common/temppath", version = "0.1.0" }
libra-types = { path = "../types", version = "0.1.0" }
libra-workspace-hack = { path = "../common/workspace-hack", version = "0.1.0" }
workspace-builder = { path = "../common/workspace-builder", version = "0.1.0" }
