[package]
name = "libra_node"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
grpcio = "0.4.3"
grpcio-sys = "0.4.4"
parity-multiaddr = "0.4.0"
signal-hook = "0.1.10"
tokio = "0.1.22"

admission_control_proto = { path = "../admission_control/admission_control_proto" }
admission_control_service = { path = "../admission_control/admission_control_service" }
config = { path = "../config" }
consensus = { path = "../consensus" }
crash_handler = { path = "../common/crash_handler" }
debug_interface = { path = "../common/debug_interface" }
executable_helpers = { path = "../common/executable_helpers" }
execution_proto = { path = "../execution/execution_proto" }
futures = { version = "=0.3.0-alpha.17", package = "futures-preview", features = ["async-await", "nightly", "io-compat", "compat"] }
grpc_helpers = { path = "../common/grpc_helpers" }
logger = { path = "../common/logger" }
mempool = { path = "../mempool" }
metrics = { path = "../common/metrics" }
crypto = { path = "../crypto/crypto" }
execution_service = { path = "../execution/execution_service" }
network = { path = "../network" }
state_synchronizer = { path = "../state_synchronizer" }
storage_client = { path = "../storage/storage_client" }
storage_service = { path = "../storage/storage_service" }
types = { path = "../types" }
vm_validator = { path = "../vm_validator" }

[dev-dependencies]
config_builder = { path = "../config/config_builder" }
types = { path = "../types", features = ["testing"]}
