[package]
name = "libra_swarm"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
bincode = "1.1.1"
ctrlc = "3.1.3"
grpcio = "0.4.3"
lazy_static = "1.2.0"
structopt = "0.2.15"
tempfile = "3.1.0"

client_lib = { package = "client", path = "../client" }
config = { path = "../config" }
config_builder = { path = "../config/config_builder" }
crypto = { path = "../crypto/legacy_crypto" }
debug_interface = { path = "../common/debug_interface" }
failure = { path = "../common/failure_ext", package = "failure_ext" }
generate_keypair = { path = "../config/generate_keypair" }
logger = { path = "../common/logger" }
tools = { path = "../common/tools" }
