[package]
name = "libra_swarm"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
client_lib = { package = "client", path = "../client" }
ctrlc = { version = "3.1.3", default-features = false }
lazy_static = { version = "1.3.0", default-features = false }
structopt = { version = "0.2.18", default-features = false }
tempfile = { version = "3.1.0", default-features = false }

config = { path = "../config" }
config_builder = { path = "../config/config_builder" }
debug_interface = { path = "../common/debug_interface" }
failure = { path = "../common/failure_ext", package = "failure_ext" }
generate_keypair = { path = "../config/generate_keypair" }
logger = { path = "../common/logger" }
crypto = { path = "../crypto/crypto" }
tools = { path = "../common/tools" }

[dev-dependencies]
crypto = { path = "../crypto/crypto", features = ["testing"]}

[features]
default = []
testing = ["crypto/testing", "client_lib/testing"]
