[package]
name = "libra_swarm"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
client_lib = { package = "libra_client", path = "../client" }
ctrlc = { version = "3.1.3", default-features = false }
lazy_static = { version = "1.3.0", default-features = false }
structopt = { version = "0.2.18", default-features = false }

libra_config = { path = "../config" }
libra_config_builder = { path = "../config/config_builder" }
libra_debug_interface = { path = "../common/debug_interface" }
failure = { path = "../common/failure_ext", package = "libra_failure_ext" }
libra_generate_keypair = { path = "../config/generate_keypair" }
libra_logger = { path = "../common/logger" }
libra_crypto = { path = "../crypto/crypto" }
libra_tools = { path = "../common/tools" }

[dev-dependencies]
libra_crypto = { path = "../crypto/crypto", features = ["testing"]}

[features]
default = []
testing = ["libra_crypto/testing", "client_lib/testing"]
