[package]
name = "libra-mempool"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra mempool"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.34"
fail = "0.4.0"
futures = "0.3.8"
itertools = "0.9.0"
once_cell = "1.4.1"
proptest = { version = "0.10.1", optional = true }
rayon = "1.4.1"
serde = { version = "1.0.117", default-features = false }
tokio = { version = "0.2.22", features = ["full"] }

bounded-executor = { path = "../common/bounded-executor", version = "0.1.0" }
channel = { path = "../common/channel", version = "0.1.0" }
lcs = { version = "0.1.0", package = "libra-canonical-serialization" }
libra-config = { path = "../config", version = "0.1.0" }
libra-crypto = { path = "../crypto/crypto", version = "0.1.0" }
libra-logger = { path = "../common/logger", version = "0.1.0" }
libra-metrics = { path = "../common/metrics", version = "0.1.0" }
libra-infallible = { path = "../common/infallible", version = "0.1.0" }
libra-proptest-helpers = { path = "../common/proptest-helpers", optional = true }
libra-trace = { path = "../common/trace", version = "0.1.0" }
libra-types = { path = "../types", version = "0.1.0" }
libra-workspace-hack = { path = "../common/workspace-hack", version = "0.1.0" }
mirai-annotations = "1.10.1"
network = { path = "../network", version = "0.1.0" }
rand = "0.7.3"
netcore = { path = "../network/netcore", version = "0.1.0" }
serde_json = "1.0.60"
storage-interface = { path = "../storage/storage-interface", version = "0.1.0" }
subscription-service = { path = "../common/subscription-service", version = "0.1.0" }
vm-validator = { path = "../vm-validator", version = "0.1.0" }

storage-service = { path = "../storage/storage-service", version = "0.1.0", optional = true }

[dev-dependencies]
proptest = "0.10.1"

libra-config = { path = "../config", version = "0.1.0", features = ["fuzzing"] }
libra-network-address = { path = "../network/network-address", version = "0.1.0" }
storage-interface = { path = "../storage/storage-interface", version = "0.1.0", features = ["fuzzing"] }

[features]
default = []
failpoints = ["fail/failpoints", "vm-validator/failpoints"]
fuzzing = ["proptest", "libra-types/fuzzing", "storage-interface/fuzzing", "libra-config/fuzzing",]
