[package]
name = "diem-mempool"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem mempool"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
fail = "0.4.0"
futures = "0.3.12"
itertools = "0.10.0"
once_cell = "1.4.1"
proptest = { version = "0.10.1", optional = true }
rayon = "1.4.1"
serde = { version = "1.0.123", default-features = false }
tokio = { version = "1.1.1", features = ["full"] }
tokio-stream = "0.1.2"

bounded-executor = { path = "../common/bounded-executor", version = "0.1.0" }
channel = { path = "../common/channel", version = "0.1.0" }
bcs = "0.1.2"
diem-config = { path = "../config", version = "0.1.0" }
diem-crypto = { path = "../crypto/crypto", version = "0.1.0" }
diem-logger = { path = "../common/logger", version = "0.1.0" }
diem-metrics = { path = "../common/metrics", version = "0.1.0" }
diem-infallible = { path = "../common/infallible", version = "0.1.0" }
diem-proptest-helpers = { path = "../common/proptest-helpers", optional = true }
diem-trace = { path = "../common/trace", version = "0.1.0" }
diem-types = { path = "../types", version = "0.1.0" }
diem-workspace-hack = { path = "../common/workspace-hack", version = "0.1.0" }
mirai-annotations = "1.10.1"
network = { path = "../network", version = "0.1.0" }
rand = "0.8.2"
netcore = { path = "../network/netcore", version = "0.1.0" }
serde_json = "1.0.61"
storage-interface = { path = "../storage/storage-interface", version = "0.1.0" }
subscription-service = { path = "../common/subscription-service", version = "0.1.0" }
vm-validator = { path = "../vm-validator", version = "0.1.0" }

storage-service = { path = "../storage/storage-service", version = "0.1.0", optional = true }

[dev-dependencies]
proptest = "0.10.1"

diem-config = { path = "../config", version = "0.1.0", features = ["fuzzing"] }
diem-network-address = { path = "../network/network-address", version = "0.1.0" }
network = { path = "../network", version = "0.1.0", features = ["fuzzing"] }
storage-interface = { path = "../storage/storage-interface", version = "0.1.0", features = ["fuzzing"] }

[features]
default = []
failpoints = ["fail/failpoints", "vm-validator/failpoints"]
fuzzing = ["proptest", "diem-types/fuzzing", "storage-interface/fuzzing", "diem-config/fuzzing",]
